# gmx_python_sdk

./: pyproject.toml
example_scripts/: create_decrease_order.py  get_positions.py  identify_farming_opportunities.py
gmx_python_sdk/scripts/v2/: gmx_utils.py
gmx_python_sdk/scripts/v2/get/: get_open_positions.py  test.py
